# poc_uniffi

./: .gitignore  Cargo.toml  README.md
ffi/poc_ffi/: Cargo.toml
ffi/poc_ffi/src/: lib.rs  lib.udl
java/: README.md  build.gradle  run.bat  run.sh
java/src/main/java/com/example/: OptionsCalculator.java
java/src/main/kotlin/uniffi/poc_ffi/: poc_ffi.kt
java/src/test/java/com/example/: OptionsCalculatorTest.java
lib/poclib/: Cargo.toml
lib/poclib/src/: lib.rs
python/src/: main.py
script/: gen_kotlin_for_java.bat  gen_python.bat
